// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPolicy should render 1`] = `
<div
  class="css-1j49gd8"
  data-testid="add-modal-message"
>
  <div
    autocomplete="off"
    class="css-vcd2ur"
    data-testid="add-rule-form"
  >
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="policy-name"
      >
        Policy Name
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="policy-name"
            name="policy-name"
            placeholder="Policy Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-effect"
      >
        Rule Effect
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-9o2u2w-button-group denali-radiobutton-group css-1ldveyy"
          data-testid="radiobuttongroup"
        >
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              checked=""
              id="radiobutton-rule-effect-radio-group-ALLOW"
              name="rule-effect-radio-group"
              type="radio"
              value="ALLOW"
            />
            <label
              for="radiobutton-rule-effect-radio-group-ALLOW"
            >
              Allow
            </label>
          </div>
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              id="radiobutton-rule-effect-radio-group-DENY"
              name="rule-effect-radio-group"
              type="radio"
              value="DENY"
            />
            <label
              for="radiobutton-rule-effect-radio-group-DENY"
            >
              Deny
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-action"
      >
        Rule Action
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-action"
            name="rule-action"
            placeholder="Rule Action"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-role"
      >
        Rule Role
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          class="css-15vmjxv-input-dropdown denali-input-dropdown css-fvi5z5"
          data-testid="input-dropdown"
          role="combobox"
        >
          <div
            class="css-1u6oono-input denali-input animated"
            data-testid="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              autocorrect="off"
              data-testid="input-node"
              id="downshift-0-input"
              name="rule-role"
              placeholder="Select Role"
              spellcheck="false"
              value=""
            />
            <div
              class="input-icon"
            >
              
              <svg
                class="css-124cf9y"
                data-testid="icon"
                height="24px"
                viewBox="0 0 1024 1024"
                width="24px"
              >
                <title>
                  arrowhead-down
                </title>
                <path
                  d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
                />
              </svg>
            </div>
            <div
              class="message"
              data-testid="message"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-resource"
      >
        Rule Resource
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-resource"
            name="rule-resource"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddPolicy should render fail to submit policy name is required 1`] = `
<div
  class="css-1j49gd8"
  data-testid="add-modal-message"
>
  <div
    autocomplete="off"
    class="css-vcd2ur"
    data-testid="add-rule-form"
  >
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="policy-name"
      >
        Policy Name
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="policy-name"
            name="policy-name"
            placeholder="Policy Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-effect"
      >
        Rule Effect
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-9o2u2w-button-group denali-radiobutton-group css-1ldveyy"
          data-testid="radiobuttongroup"
        >
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              checked=""
              id="radiobutton-rule-effect-radio-group-ALLOW"
              name="rule-effect-radio-group"
              type="radio"
              value="ALLOW"
            />
            <label
              for="radiobutton-rule-effect-radio-group-ALLOW"
            >
              Allow
            </label>
          </div>
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              id="radiobutton-rule-effect-radio-group-DENY"
              name="rule-effect-radio-group"
              type="radio"
              value="DENY"
            />
            <label
              for="radiobutton-rule-effect-radio-group-DENY"
            >
              Deny
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-action"
      >
        Rule Action
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-action"
            name="rule-action"
            placeholder="Rule Action"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-role"
      >
        Rule Role
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          class="css-15vmjxv-input-dropdown denali-input-dropdown css-fvi5z5"
          data-testid="input-dropdown"
          role="combobox"
        >
          <div
            class="css-1u6oono-input denali-input animated"
            data-testid="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-1-label"
              autocomplete="off"
              autocorrect="off"
              data-testid="input-node"
              id="downshift-1-input"
              name="rule-role"
              placeholder="Select Role"
              spellcheck="false"
              value=""
            />
            <div
              class="input-icon"
            >
              
              <svg
                class="css-124cf9y"
                data-testid="icon"
                height="24px"
                viewBox="0 0 1024 1024"
                width="24px"
              >
                <title>
                  arrowhead-down
                </title>
                <path
                  d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
                />
              </svg>
            </div>
            <div
              class="message"
              data-testid="message"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-resource"
      >
        Rule Resource
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-resource"
            name="rule-resource"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddPolicy should render failed to submit action is required 1`] = `
<div
  class="css-1j49gd8"
  data-testid="add-modal-message"
>
  <div
    autocomplete="off"
    class="css-vcd2ur"
    data-testid="add-rule-form"
  >
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="policy-name"
      >
        Policy Name
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="policy-name"
            name="policy-name"
            placeholder="Policy Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-effect"
      >
        Rule Effect
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-9o2u2w-button-group denali-radiobutton-group css-1ldveyy"
          data-testid="radiobuttongroup"
        >
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              checked=""
              id="radiobutton-rule-effect-radio-group-ALLOW"
              name="rule-effect-radio-group"
              type="radio"
              value="ALLOW"
            />
            <label
              for="radiobutton-rule-effect-radio-group-ALLOW"
            >
              Allow
            </label>
          </div>
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              id="radiobutton-rule-effect-radio-group-DENY"
              name="rule-effect-radio-group"
              type="radio"
              value="DENY"
            />
            <label
              for="radiobutton-rule-effect-radio-group-DENY"
            >
              Deny
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-action"
      >
        Rule Action
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-action"
            name="rule-action"
            placeholder="Rule Action"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-role"
      >
        Rule Role
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-2-label"
          class="css-15vmjxv-input-dropdown denali-input-dropdown css-fvi5z5"
          data-testid="input-dropdown"
          role="combobox"
        >
          <div
            class="css-1u6oono-input denali-input animated"
            data-testid="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-2-label"
              autocomplete="off"
              autocorrect="off"
              data-testid="input-node"
              id="downshift-2-input"
              name="rule-role"
              placeholder="Select Role"
              spellcheck="false"
              value=""
            />
            <div
              class="input-icon"
            >
              
              <svg
                class="css-124cf9y"
                data-testid="icon"
                height="24px"
                viewBox="0 0 1024 1024"
                width="24px"
              >
                <title>
                  arrowhead-down
                </title>
                <path
                  d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
                />
              </svg>
            </div>
            <div
              class="message"
              data-testid="message"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-resource"
      >
        Rule Resource
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-resource"
            name="rule-resource"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddPolicy should render failed to submit role name is required 1`] = `
<div
  class="css-1j49gd8"
  data-testid="add-modal-message"
>
  <div
    autocomplete="off"
    class="css-vcd2ur"
    data-testid="add-rule-form"
  >
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="policy-name"
      >
        Policy Name
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="policy-name"
            name="policy-name"
            placeholder="Policy Name"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-effect"
      >
        Rule Effect
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-9o2u2w-button-group denali-radiobutton-group css-1ldveyy"
          data-testid="radiobuttongroup"
        >
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              checked=""
              id="radiobutton-rule-effect-radio-group-ALLOW"
              name="rule-effect-radio-group"
              type="radio"
              value="ALLOW"
            />
            <label
              for="radiobutton-rule-effect-radio-group-ALLOW"
            >
              Allow
            </label>
          </div>
          <div
            class="css-fe5os4-radiobutton denali-radiobutton"
            data-testid="radiobutton-wrapper"
          >
            <input
              id="radiobutton-rule-effect-radio-group-DENY"
              name="rule-effect-radio-group"
              type="radio"
              value="DENY"
            />
            <label
              for="radiobutton-rule-effect-radio-group-DENY"
            >
              Deny
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-action"
      >
        Rule Action
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-action"
            name="rule-action"
            placeholder="Rule Action"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-role"
      >
        Rule Role
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-3-label"
          class="css-15vmjxv-input-dropdown denali-input-dropdown css-fvi5z5"
          data-testid="input-dropdown"
          role="combobox"
        >
          <div
            class="css-1u6oono-input denali-input animated"
            data-testid="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-3-label"
              autocomplete="off"
              autocorrect="off"
              data-testid="input-node"
              id="downshift-3-input"
              name="rule-role"
              placeholder="Select Role"
              spellcheck="false"
              value=""
            />
            <div
              class="input-icon"
            >
              
              <svg
                class="css-124cf9y"
                data-testid="icon"
                height="24px"
                viewBox="0 0 1024 1024"
                width="24px"
              >
                <title>
                  arrowhead-down
                </title>
                <path
                  d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
                />
              </svg>
            </div>
            <div
              class="message"
              data-testid="message"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-y97ykc"
    >
      <label
        class="css-fc0mv0-input-label denali-input-label css-9xcde0"
        for="rule-resource"
      >
        Rule Resource
      </label>
      <div
        class="css-1xqce5"
      >
        <div
          class="css-dqae60-input denali-input animated css-fvi5z5"
          data-testid="input-wrapper"
        >
          <input
            autocomplete="off"
            data-testid="input-node"
            id="rule-resource"
            name="rule-resource"
            value=""
          />
          <div
            class="message"
            data-testid="message"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
